samples/_failures_safe/1761261945_cfe50b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c182427.c: In function ‘main’:
./samples/SAFE/__tmp_7c182427.c:148:19: error: expected ‘)’ at end of input
  148 |         if (strcmp
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_7c182427.c:148:9: error: expected declaration or statement at end of input
  148 |         if (strcmp
      |         ^~
./samples/SAFE/__tmp_7c182427.c:148:9: error: expected declaration or statement at end of input
